# assistant

./: .gitignore  CHANGELOG.md  ONBOARDING.md  README.md  install-bootstrap.sh  install.sh  pyproject.toml
config/: action-classes.bootstrap.json  agent-tools-mcp.json  droid-glm-settings.json  policies.bootstrap.json
docs/: assistant-comms-onboarding.md  assistant-operating-guide.md
hooks/: cmux-auto-resume.py  cmux-session-ledger.py
install/: patch-factory-settings.py  patch-settings.py
launchagents/: com.assistant.assistant-comms.plist  com.assistant.assistant-page.plist  com.assistant.assistant-pulse.plist  com.assistant.assistant-todo-server.plist  com.assistant.cloudflared-tunnel.plist  com.assistant.connector-gcal.plist  com.assistant.connector-github.plist  com.assistant.connector-gmail.plist  com.assistant.connector-jira.plist  com.assistant.connector-outlook.plist  com.assistant.connector-slack.plist  com.assistant.machine-config-sync.plist  com.assistant.memory-sync-pull.plist  com.assistant.session-context-watcher.plist  com.assistant.slack-reaction-todo.plist  com.assistant.slack-reactor.plist  com.assistant.workspace-watcher.plist  com.assistant.world-scanner.plist  com.mukul.assistant-daemon.plist  com.mukuls.assistant-page.plist  com.mukuls.assistant-pulse.plist  com.mukuls.assistant-todo-server.plist  com.mukuls.session-context-watcher.plist  com.mukuls.triage-pulse.plist  com.mukuls.world-scanner.plist
prompts/: INCIDENTS.md  brief-narrator-prompt.md  dispatch-classification.md  observer-batch-prompt.md  observer-prompt.md  prompt-triage-agent.md  (+5 more)
(+470 files in other folders)
